--- a/stow/back-me-up/etc/rsnapshot.conf
+++ b/stow/back-me-up/etc/rsnapshot.conf
@@ -172,6 +172,7 @@ one_fs		1
 #exclude	???
 # *coughs*
 exclude		/home/lampam/Videos
+exclude		/home/lampam/dl
 exclude		/home/lampam/Downloads/Ant?Videos
 exclude		/home/lampam/Downloads/.ant
 # several gigabytes of copies of shared libs. No point
@@ -186,6 +187,8 @@ exclude		/home/lampam/.cabal/share
 exclude		/home/lampam/.cabal/lib
 exclude		/home/lampam/.cargo/git
 exclude		/home/lampam/.stack/programs
+# Temp directories
+exclude		/home/lampam/.cache
 # Big data
 exclude		/home/lampam/hex/data
 
